--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@ body{
     transform: scale(1.2);
     transition: transform 2s ease;
 }
+.bannersection:hover > .webheading > h1{
+    transform: scale(1.05);
+    transition: transform 2s ease;
+    color:lightblue;
 
+}
 .webheading{
     font-size: 64px;
     margin-left: 156px;
@@ -86,7 +91,6 @@ body{
     width:100%;
 }
 .playerdetail > p{
-    /* padding-top:10px; */
     margin:0;
     font-size: 16px;
     color: #6C6C6C;
@@ -183,6 +187,7 @@ higlights
      .bannersection, .highlights, .videos, footer{
          display: flex;
          flex-direction: column;
+         align-items: center;
      }
      .bannersection> .webheading{
          font-size: 36px;
@@ -217,7 +222,7 @@ higlights
          margin-top: 16px;
      }
      .highlights{
-         margin:60px 16px 0 16px;
+         margin:60px 0 0 16px;
      }
      .highlightsdetail > h2{
          font-size: 30px;
@@ -226,14 +231,14 @@ higlights
          margin-bottom: 24px;
      }
      .highlightsdetail{
-         margin:0;
+         margin:0 0 29px 0;
          width:329px;
-         height:299px;
+         height:231px;
      }
      .highlightsimg{
-         width:345px;
+         width:330px;
          height:248px;
-         margin:29px 16px 0px 0px;
+         margin: 29px 16px 70px 0px;;
      }
      .highlightsimg img{
          width:100%;
@@ -243,6 +248,9 @@ higlights
          width:370px;
          height:320px;  
      }
+     .videosection{
+         margin-top:20px;
+     }
      .videos{
          padding-top: 10px;
          padding-bottom: 10px;
@@ -251,9 +259,13 @@ higlights
      .footerimg{
          width:271px;
          height:63px;
+         margin-top: 43px;
      }
      .footerimg img{
          width:100%;
+     }
+     footer{
+         margin-bottom: 187px;
      }
      
  }
