--- a/style.css
+++ b/style.css
@@ -130,6 +130,17 @@ higlights
 .highlightsimg img{
     width:100%;
 }
+.page{
+    text-align: center;
+    
+}
+.page a{
+    color:black;
+    text-decoration: none;
+    border: 2px solid rgb(37, 35, 35);
+    border-radius: 100%;
+}
+
 /* video section bottom */
 .videosection > h2{
     text-align: center;
@@ -243,6 +254,8 @@ higlights
      .highlightsimg img{
          width:100%;
      }
+
+     
      
      .playersvideo{
          width:370px;
